[tool.poetry]
name = "dar_sys"
version = "0.1.0"
description = ""
authors = ["avm7177 <amthy15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
SQLAlchemy = "^1.4.29"
fastapi = "^0.71.0"
Shapely = "^1.8.0"
requests = "^2.27.1"
hypercorn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
